add Smile Modal

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -344,6 +344,13 @@ body {
 
         }
     }
+.modal.smileModal{
+    .modal-content{
+        background-color: transparent;
+        box-shadow: none;
+        border: 0 none;
+    }
+}
 
 
 }
