--- a/scss/style.scss
+++ b/scss/style.scss
@@ -97,17 +97,39 @@ body {
             padding-right: 30px;
         }
     }
-
+    input[type="text"].payout {
+        width        : 100%;
+        border-style : solid;
+        border-width : 2px;
+        border-color : rgb(255, 255, 255);
+        border-radius: 5px;
+        height       : 42px;
+        text-align   : center;
+        margin-bottom: 15px;
+        @media(min-width: 1600px){
+            height       : 50px;
+        }
+        &:focus {
+            outline-width: 1px;
+            outline-style: dashed;
+        }
+    }
     .whiteBox {
         border-radius   : 10px;
         background-color: rgb(255, 255, 255);
         box-shadow      : 0px 1px 6.51px 0.49px rgba(0, 0, 0, 0.46);
         padding         : 30px 15px 0;
-
+        
         &.boxWrap {
             padding: 30px 15px 0;
             text-align: center;
             margin-bottom: 30px;
+            @media (min-width: 1200px) {
+                margin-top: 15px;
+                min-height: calc(100% - 72px);
+                display: flex;
+                flex-direction: column;
+            }
             h3 {
                 font-size  : 24px;
                 font-weight: bold;
@@ -149,7 +171,7 @@ body {
                 color           : #fff;
                 font-weight     : bold;
                 font-size       : 24px;
-
+                margin-top: auto;
                 span.saprator {
                     color                    : rgba(255, 255, 255, 1);
                     animation-name           : example;
@@ -177,6 +199,13 @@ body {
     }
     
     .rightSection {
+        .whiteBox {
+            padding: 20px;
+            .row-5-cols{
+                margin-bottom: -30px;
+            }
+        }
+
         .btn--group {
             margin-bottom: 30px;
             @media(max-width: 991px){
@@ -213,30 +242,45 @@ body {
             border-radius: 5px;
             background   : #f8eaf8;
             padding      : 15px;
-            @media(max-width: 991px){
-                text-align: center;
-            }
+            text-align: center;
+            height: 100%;
+
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            
             span {
                 font-weight: bold;
             }
-
+            
             .balance {
                 font-size    : 18px;
                 margin-bottom: 15px;
-
+                @media(min-width: 1600px){
+                    font-size    : 20px;
+                }
+                
                 span {
                     font-size: 30px;
                     display  : block;
+                    @media(min-width: 1600px){
+                        font-size    : 34px;
+                    }
                 }
             }
-
+            
             .dated {
                 margin-bottom: 15px;
                 font-size    : 18px;
-
+                @media(min-width: 1600px){
+                    font-size    : 20px;
+                }
                 span {
                     font-size: 24px;
                     display  : block;
+                    @media(min-width: 1600px){
+                        font-size    : 28px;
+                    }
                 }
 
             }
@@ -244,21 +288,8 @@ body {
             .total {
                 font-size  : 18px;
                 font-weight: bold;
-            }
-
-            input[type="text"] {
-                width        : 100%;
-                border-style : solid;
-                border-width : 2px;
-                border-color : rgb(228, 228, 228);
-                border-radius: 5px;
-                height       : 46px;
-                text-align   : center;
-                margin-bottom: 15px;
-
-                &:focus {
-                    outline-width: 1px;
-                    outline-style: dashed;
+                @media(min-width: 1600px){
+                    font-size    : 20px;
                 }
             }
         }
@@ -276,6 +307,11 @@ body {
                 font-weight: bold;
                 font-size  : 18px;
                 text-align : center;
+                margin-top: 10px;
+                @media(min-width: 1600px){
+                    font-size  : 20px;
+                
+                }
             }
 
             input[type="text"] {
