--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,6 +24,9 @@ body {
         &.btn-primary {
             background: linear-gradient(90deg, rgb(108, 195, 216) 0%, rgb(60, 148, 209) 100%);
         }
+        &.btn-success {
+            background: linear-gradient(90deg, #78de84 0%, #3cd14e 100%);
+        }
 
         &.btn-secondary {
             background: linear-gradient(90deg, rgb(252, 162, 112) 0%, rgb(253, 104, 106) 100%);
@@ -62,6 +65,53 @@ body {
         background-color: #e2bde2;
         padding         : 0px 0 140px;
         margin-bottom   : -135px;
+        
+        .btn--group {
+            margin-bottom: 0;
+            margin-left: auto;
+            @media(max-width: 991px){
+                text-align: center;
+            }
+            input[type="text"].payout {
+                width        : auto;
+                border-style : solid;
+                border-width : 2px;
+                border-color : rgb(255, 255, 255);
+                border-radius: 5px;
+                height       : 39px;
+                text-align   : center;
+                @media(min-width: 1600px){
+                    height       : 50px;
+                }
+                &:focus {
+                    outline-width: 1px;
+                    outline-style: dashed;
+                }
+            }
+            .btn {
+                border       : 0 none;
+                border-radius: 5px;
+                width        : auto;
+                height       : auto;
+                font-size    : 16px;
+                font-weight  : normal;
+                margin-left: 6px;
+                // padding      : 7px 15px;
+                // line-height  : 28px;
+                @media(min-width: 1600px){
+                    font-size    : 18px;
+                }
+                @media(max-width: 991px){
+                    font-size: 14px;
+                    padding: 5px 10px;
+                    line-height: normal;
+                    margin-top: 10px;
+                    &:nth-of-type(1n+2) {
+                        margin-left: 10px;
+                    }
+                }
+            }
+        }
         .dropdown{
             margin-left: auto;
             .dropdown-toggle {
@@ -97,23 +147,6 @@ body {
             padding-right: 30px;
         }
     }
-    input[type="text"].payout {
-        width        : 100%;
-        border-style : solid;
-        border-width : 2px;
-        border-color : rgb(255, 255, 255);
-        border-radius: 5px;
-        height       : 42px;
-        text-align   : center;
-        margin-bottom: 15px;
-        @media(min-width: 1600px){
-            height       : 50px;
-        }
-        &:focus {
-            outline-width: 1px;
-            outline-style: dashed;
-        }
-    }
     .whiteBox {
         border-radius   : 10px;
         background-color: rgb(255, 255, 255);
@@ -121,12 +154,12 @@ body {
         padding         : 30px 15px 0;
         
         &.boxWrap {
-            padding: 30px 15px 0;
+            padding: 15px 15px 0;
             text-align: center;
             margin-bottom: 30px;
             @media (min-width: 1200px) {
-                margin-top: 15px;
-                min-height: calc(100% - 72px);
+                margin-top: 0px;
+                min-height: calc(100% );
                 display: flex;
                 flex-direction: column;
             }
@@ -202,40 +235,10 @@ body {
         .whiteBox {
             padding: 20px;
             .row-5-cols{
-                margin-bottom: -30px;
+                margin-bottom: 0;
             }
         }
 
-        .btn--group {
-            margin-bottom: 30px;
-            @media(max-width: 991px){
-                text-align: center;
-            }
-            
-            .btn {
-                border       : 0 none;
-                border-radius: 5px;
-                width        : auto;
-                height       : auto;
-                font-size    : 18px;
-                font-weight  : normal;
-                padding      : 7px 15px;
-                line-height  : 28px;
-
-                &:nth-of-type(1n+2) {
-                    margin-left: 15px;
-                }
-                @media(max-width: 991px){
-                    font-size: 14px;
-                    padding: 5px 10px;
-                    line-height: normal;
-                    margin-top: 10px;
-                    &:nth-of-type(1n+2) {
-                        margin-left: 10px;
-                    }
-                }
-            }
-        }
         
         .balanceBox {
             color        : #852784;
@@ -296,7 +299,7 @@ body {
 
         .col-5-cols {
             max-width    : 20%;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             @media(max-width: 991px){
                 max-width    : 25%;
             }
@@ -320,7 +323,7 @@ body {
                 border-width : 2px;
                 border-color : rgb(228, 228, 228);
                 border-radius: 5px;
-                height       : 46px;
+                height       : 36px;
                 text-align   : center;
 
                 &:focus {
@@ -332,8 +335,8 @@ body {
     }
 
     .hSlider {
-        margin: 50px -15px 30px;
-        max-height: 360px;
+        margin: 26px -15px 30px;
+        max-height: 160px;
         overflow: auto;
         padding: 0px 15px 15px;
         @media(max-width: 1199px){
@@ -355,25 +358,33 @@ body {
                 border-radius   : 10px;
                 background-color: rgb(255, 255, 255);
                 box-shadow      : 0px 1px 6.51px 0.49px rgba(0, 0, 0, 0.46);
-                padding         : 15px;
-                h6 {
-                    font-weight: bold;
-                    font-size  : 18px;
-                    text-align : center;
-                    color: rgb(133, 39, 132);
-                    margin-top: 15px;
+                padding         : 10px;
+                display: flex;
+                .imgWrap{
+                    flex: 0 0 30%;
+                    order: 2;
                 }
-                .dateTime {
-                    text-align: center;
-                    font-size: 18px;
-                    .date {
-                        display: block;
+                .caption{
+                    flex: 1 0 auto;
+                    h6 {
+                        font-weight: bold;
+                        font-size  : 18px;
+                        line-height: 18px;
+                        color: rgb(133, 39, 132);
+                        margin-bottom: 6px;
                     }
-    
-                    .time {
-                        display: block;
+                    .dateTime {
+                        font-size: 18px;
+                        line-height: 18px;
+                        .date {
+                            display: block;
+                        }
+        
+                        .time {
+                            display: block;
+                        }
+        
                     }
-    
                 }
 
             }
