--- a/scss/style.scss
+++ b/scss/style.scss
@@ -65,12 +65,18 @@ body {
         background-color: #e2bde2;
         padding         : 0px 0 140px;
         margin-bottom   : -135px;
-        
+        @media(max-width: 991px){
+            nav.navbar{
+                flex-wrap: wrap;
+            }
+        }
         .btn--group {
             margin-bottom: 0;
             margin-left: auto;
             @media(max-width: 991px){
                 text-align: center;
+                flex-grow: 1;
+                order: 5;
             }
             input[type="text"].payout {
                 width        : auto;
@@ -82,6 +88,9 @@ body {
                 text-align   : center;
                 @media(min-width: 1600px){
                     height       : 50px;
+                }
+                @media(max-width: 991px){
+                    height       : 31px;
                 }
                 &:focus {
                     outline-width: 1px;
@@ -105,10 +114,7 @@ body {
                     font-size: 14px;
                     padding: 5px 10px;
                     line-height: normal;
-                    margin-top: 10px;
-                    &:nth-of-type(1n+2) {
-                        margin-left: 10px;
-                    }
+                    margin: 6px;
                 }
             }
         }
