--- a/scss/style.scss
+++ b/scss/style.scss
@@ -65,11 +65,18 @@ body {
         background-color: #e2bde2;
         padding         : 0px 0 140px;
         margin-bottom   : -135px;
-        @media(max-width: 991px){
-            nav.navbar{
+        nav.navbar{
+            @media(max-width: 991px){
                 flex-wrap: wrap;
             }
+            a.navbar-brand{
+                img{
+                    height: 60px;
+                    width: auto;
+                }
+            }
         }
+
         .btn--group {
             margin-bottom: 0;
             margin-left: auto;
@@ -87,7 +94,7 @@ body {
                 height       : 39px;
                 text-align   : center;
                 @media(min-width: 1600px){
-                    height       : 50px;
+                    height       : 38px;
                 }
                 @media(max-width: 991px){
                     height       : 31px;
@@ -341,24 +348,28 @@ body {
     }
 
     .hSlider {
-        margin: 26px -15px 30px;
-        max-height: 160px;
+        margin: 10px -15px 0px;
         overflow: auto;
         padding: 0px 15px 15px;
-        @media(max-width: 1199px){
+        max-height: 238px;
+        @media(min-width: 1500px){
+            max-height: 256px;
+        }
+        @media(min-width: 1700px){
+            max-height: 295px;
         }
         .col-5-cols {
-            max-width    : 20%;
+            width    : 20%;
             margin-top: 10px;
             margin-bottom: 10px;
-            @media(max-width: 1199px){
-                max-width    : 25%;
+            @media(min-width: 1199px){
+                width    : 20%;
             }
             @media(max-width: 991px){
-                max-width    : 33.33%;
+                width    : 33.33%;
             }
             @media(max-width: 575px){
-                max-width    : 50%;
+                width    : 50%;
             }
             .thumbBox {
                 border-radius   : 10px;
