Max height issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -351,6 +351,7 @@ body {
         margin: 10px -15px 0px;
         overflow: auto;
         padding: 0px 15px 15px;
+        /*
         max-height: 238px;
         @media(min-width: 1500px){
             max-height: 256px;
@@ -358,6 +359,7 @@ body {
         @media(min-width: 1700px){
             max-height: 295px;
         }
+        */
         .col-5-cols {
             width    : 20%;
             margin-top: 10px;
